# news-hotspots

./: .gitignore  .project_rule.md  AGENTS.md  README.md  README_CN.md  SKILL.md  _meta.json  pyproject.toml
.trae/documents/: 文档职责优化计划.md
.trae/rules/: project_rule.md
config/: schema.json
config/defaults/: api.json  github.json  reddit.json  rss.json  runtime.json  sources.json  topic-rules.json  topics.json  twitter.json
references/: automation-template.md  digest-prompt.md  execution-guide.md  hotspot-prompt.md
scripts/: config_loader.py  fetch-api.py  fetch-github-trending.py  fetch-github.py  fetch-google.py  fetch-reddit.py  fetch-rss.py  fetch-toutiao.py  fetch-twitter.py  fetch-v2ex.py  fetch-weibo.py  fetch-zhihu.py  merge-hotspots.py  merge-sources.py  merge-summarize.py  run-pipeline.py  source-health.py  step_contract.py  step_registry.py  test-news-digest.sh  test-news-hotspots.sh  validate-config.py
tests/: test_config.py  test_fetch_api.py  test_fetch_github.py  test_fetch_github_trending.py  test_fetch_google.py  test_fetch_reddit.py  test_fetch_rss.py  test_fetch_toutiao.py  test_fetch_twitter.py  test_fetch_weibo.py  test_fetch_zhihu.py  test_hotspots.py  test_merge.py  test_run_pipeline.py  test_source_health.py  test_step_contract.py  test_summarize.py
tests/fixtures/: merged.json
