[project]
name = "news-hotspots"
version = "3.18.0"
description = "Automated news hotspots system with unified data sources, quality scoring, and markdown output"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.0",
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.9.0",
]

[tool.uv]
dev-dependencies = []
